frame/support/test/tests/construct_runtime_ui/missing_event_generic_on_module_with_instance.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		System: system expanded::{}::{Pallet},
		Balance: balances::<Instance1> expanded::{}::{Event},
	}
}

fn main() {}
